<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OneVault-test</string>
    <string name="text_income">Add Income</string>
    <string name="text_expense">Add Expense</string>
    <string name="text_delete">Delete</string>
    <string name="text_save">Save</string>
    <string name="text_edit">Edit</string>
    <string name="text_date">Payment Date</string>
    <string name="text_firstdate">First Payment Date</string>
    <string name="text_amount">Amount</string>
    <string name="text_paymethod">Payment Method</string>
    <string name="text_ref">Check/Ref No.</string>
    <string name="text_description">Description</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_tax">Tax</string>
    <string name="text_payer">Payer</string>
    <string name="text_payee">Payee</string>
    <string name="text_nopayments">No. of Payments</string>
    <string name="text_frequency">Frequency</string>
</resources>
